Setup GitHub Pages

--- a/package.json
+++ b/package.json
@@ -46,5 +46,6 @@
     "ignoredBuiltDependencies": [
       "esbuild"
     ]
-  }
+  },
+  "homepage": "https://iamandiradu.github.io/react-weather-moto"
 }
